# degen_wall

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  deploy.sh  eslint.config.js  generate_artifacts.sh  package.json  run_tests.js  tsconfig.json  tsconfig.test.json
programs/degen_wall/: Cargo.toml  build.sh
programs/degen_wall/src/: constants.rs  errors.rs  helpers.rs  lib.rs
programs/degen_wall/src/events/: metadata.rs  mod.rs  pixels.rs  pool.rs  sol_treasury.rs
programs/degen_wall/src/instructions/metadata/: create_metadata.rs  mod.rs
programs/degen_wall/src/instructions/pixels/: create_pixels.rs  mod.rs
programs/degen_wall/src/instructions/pool/: create_pool.rs  delete_pool.rs  update_pool.rs
programs/degen_wall/src/instructions/sol_treasury/: create_sol_treasury.rs  mod.rs  update_sol_treasury.rs
programs/degen_wall/src/state/: metadata.rs  pixels.rs  pool.rs  sol_treasury.rs
scripts/: install.js  patch.js  unpatch.js
src/: anchor-types.ts  env.ts  index.ts  interface-types.ts  program-instructions.ts  program-static.ts  util.ts
tests/: ping.ts  test.ts  util.ts
