[package]
name = "degen_wall"
version = "1.0.0"
description = "Created by DegenWall"
edition = "2021"

[lib]
name = "degen_wall"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-security-txt = "1.1.1"
